--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
   <!-- Total product page -->
   <div id="totalproductpage" style="display: none;">
     <div class="addPages"
-      style="width: 98vw; font-weight: 800; font-size: 20px; display: flex; justify-content: center; flex-direction: column;">
+      style="width: 100vw; font-weight: 800; font-size: 20px; display: flex; justify-content: center; flex-direction: column;">
       <div
         style=" background-color: rgb(189, 189, 189); width: 100%; border: 1px solid black; padding: 10px; height: fit-content; border-radius: 15px;">
         <div style="display: flex; justify-content: space-evenly;">
@@ -686,14 +686,14 @@
         <div><button id="totalproductbackbtn" style="width: 30vw;" class="statement-btn">Back</button></div>
       </div>
       <hr>
-      <div id="costHistory" class="costhistory" style="height: 50vh;">
-        <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
-          <div style="display:  flex; justify-content: space-evenly; width: 48vw;">
-            <span style="width: 80vw; ">Product Name</span>
+      <div id="costHistory" class="costhistory" style="height: 50vh; width: 99vw;">
+        <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; width: 90vw;">
+          <div style="display:  flex; justify-content: space-evenly; width: 90vw;">
+            <span style="width: 90vw; ">Product Name</span>
             <span>Quantity</span>
           </div>
-          <table style="width: 50vw; height: 60vh;">
-            <tbody id="productlisttable">
+          <table style="width: 90vw; height: 60vh;">
+            <tbody id="productlisttable" style="width: 90vw;">
             </tbody>
           </table>
         </div>
